// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> component Basic tag veriant should render a span html element with given styles 1`] = `
.emotion-0 {
  border: 1px solid #CCCCCC;
  background-color: #FFFFFF;
  color: #4F4F4F;
  font-weight: 700;
  font-size: 0.625rem;
  line-height: 1.34;
  margin: 0;
  text-transform: uppercase;
  text-align: center;
  letter-spacing: 0.5px;
  padding: 4px 6px;
  border-radius: 2px;
  display: block;
  max-width: 150px;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

<div>
  <span
    class="emotion-0 emotion-1"
    data-testid="tag"
  >
    Active
  </span>
</div>
`;

exports[`<Tag /> component should render a span html element with the given content 1`] = `
.emotion-0 {
  border: 0;
  background-color: #EDF6FC;
  color: #151617;
  font-weight: 700;
  font-size: 0.625rem;
  line-height: 1.34;
  margin: 0;
  text-transform: uppercase;
  text-align: center;
  letter-spacing: 0.5px;
  padding: 4px 6px;
  border-radius: 2px;
  display: block;
  max-width: 150px;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

<div>
  <span
    class="emotion-0 emotion-1"
    data-testid="tag"
  >
    Active
  </span>
</div>
`;

exports[`<Tag /> component should show ellipsis if the content exceeds the limit width 1`] = `
.emotion-0 {
  border: 0;
  background-color: #EDF6FC;
  color: #151617;
  font-weight: 700;
  font-size: 0.625rem;
  line-height: 1.34;
  margin: 0;
  text-transform: uppercase;
  text-align: center;
  letter-spacing: 0.5px;
  padding: 4px 6px;
  border-radius: 2px;
  display: block;
  max-width: 150px;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

<div>
  <span
    class="emotion-0 emotion-1"
    data-testid="tag"
  >
    This is a very long tag label
  </span>
</div>
`;
